--- a/inicio/index.html
+++ b/inicio/index.html
@@ -35,7 +35,7 @@
 
         <ul class="pure-menu-list">
             <li class="pure-menu-item pure-menu-selected"><a href="#" class="pure-menu-link">Home</a></li>
-            <li class="pure-menu-item"><a href="Plataforma/ios.html" class="pure-menu-link">Demo</a></li>
+            <li class="pure-menu-item"><a href="Plataforma/demo.html" class="pure-menu-link">Demo</a></li>
             <li class="pure-menu-item"><a href="#" class="pure-menu-link" data-toggle="modal" data-target="#login-modal">Sign Up</a></li>
         </ul>
     </div>
